--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,24 +13,24 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-25 Sat 11:35]
+#+CAPTION: Clock summary at [2019-05-25 Sat 11:48]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *26:59* |       |       | 100.0 |
+| *Total time*                                           | *27:12* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 26:59   |       |       | 100.0 |
-| Active                                                 |         | 26:59 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |  13.4 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |  14.0 |
+| Stories                                                | 27:12   |       |       | 100.0 |
+| Active                                                 |         | 27:12 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |  13.3 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |  13.8 |
 | Sprint and product backlog grooming                    |         |       |  1:18 |   4.8 |
-| Make wale templates meta-model elements                |         |       |  2:45 |  10.2 |
+| Make wale templates meta-model elements                |         |       |  2:45 |  10.1 |
 | Flatten the data directory                             |         |       |  1:11 |   4.4 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.9 |
-| Rename coding model                                    |         |       |  2:17 |   8.5 |
-| Windows build is failing on a number of tests          |         |       |  0:30 |   1.9 |
-| Read variability papers                                |         |       |  0:56 |   3.5 |
-| Add code generation support to static configurations   |         |       | 10:24 |  38.5 |
+| Rename coding model                                    |         |       |  2:17 |   8.4 |
+| Windows build is failing on a number of tests          |         |       |  0:30 |   1.8 |
+| Read variability papers                                |         |       |  0:56 |   3.4 |
+| Add code generation support to static configurations   |         |       | 10:37 |  39.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -399,6 +399,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-25 Sat 11:35]--[2019-05-25 Sat 11:48] =>  0:13
     CLOCK: [2019-05-25 Sat 11:25]--[2019-05-25 Sat 11:34] =>  0:09
     CLOCK: [2019-05-24 Fri 16:52]--[2019-05-24 Fri 16:58] =>  0:06
     CLOCK: [2019-05-24 Fri 16:29]--[2019-05-24 Fri 16:51] =>  0:22
