--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,14 +13,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-25 Sat 12:02]
+#+CAPTION: Clock summary at [2019-05-25 Sat 12:08]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *27:25* |       |       | 100.0 |
+| *Total time*                                           | *27:30* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 27:25   |       |       | 100.0 |
-| Active                                                 |         | 27:25 |       | 100.0 |
+| Stories                                                | 27:30   |       |       | 100.0 |
+| Active                                                 |         | 27:30 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  3:37 |  13.2 |
 | Create a video demo for the previous sprint's features |         |       |  3:46 |  13.7 |
 | Sprint and product backlog grooming                    |         |       |  1:18 |   4.7 |
@@ -30,7 +30,7 @@
 | Rename coding model                                    |         |       |  2:17 |   8.3 |
 | Windows build is failing on a number of tests          |         |       |  0:30 |   1.8 |
 | Read variability papers                                |         |       |  0:56 |   3.4 |
-| Add code generation support to static configurations   |         |       | 10:50 |  39.5 |
+| Add code generation support to static configurations   |         |       | 10:55 |  39.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -399,6 +399,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-25 Sat 12:03]--[2019-05-25 Sat 12:08] =>  0:05
     CLOCK: [2019-05-25 Sat 11:49]--[2019-05-25 Sat 12:02] =>  0:13
     CLOCK: [2019-05-25 Sat 11:35]--[2019-05-25 Sat 11:48] =>  0:13
     CLOCK: [2019-05-25 Sat 11:25]--[2019-05-25 Sat 11:34] =>  0:09
