--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,24 +13,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-25 Sat 15:18]
+#+CAPTION: Clock summary at [2019-05-25 Sat 15:45]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *29:44* |       |       | 100.0 |
+| *Total time*                                           | *30:08* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 29:44   |       |       | 100.0 |
-| Active                                                 |         | 29:44 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |  12.2 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |  12.7 |
-| Sprint and product backlog grooming                    |         |       |  1:18 |   4.4 |
-| Make wale templates meta-model elements                |         |       |  2:45 |   9.2 |
-| Flatten the data directory                             |         |       |  1:11 |   4.0 |
+| Stories                                                | 30:08   |       |       | 100.0 |
+| Active                                                 |         | 30:08 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |  12.0 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |  12.5 |
+| Sprint and product backlog grooming                    |         |       |  1:18 |   4.3 |
+| Make wale templates meta-model elements                |         |       |  2:45 |   9.1 |
+| Flatten the data directory                             |         |       |  1:11 |   3.9 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.8 |
-| Rename coding model                                    |         |       |  2:17 |   7.7 |
+| Rename coding model                                    |         |       |  2:17 |   7.6 |
 | Windows build is failing on a number of tests          |         |       |  0:30 |   1.7 |
 | Read variability papers                                |         |       |  0:56 |   3.1 |
-| Add code generation support to static configurations   |         |       | 13:09 |  44.2 |
+| Add code generation support to static configurations   |         |       | 13:09 |  43.6 |
+| Move parent processing to injection                    |         |       |  0:24 |   1.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -505,6 +506,18 @@ Approach:
 - update resolver to resolve static configurations.
 - generate the struct for the static configuration.
 - generate a method to read the struct from a dynamic configuration.
+
+*** STARTED Move parent processing to injection                       :story:
+    :LOGBOOK:
+    CLOCK: [2019-05-25 Sat 15:40]--[2019-05-25 Sat 15:44] =>  0:04
+    CLOCK: [2019-05-25 Sat 15:19]--[2019-05-25 Sat 15:39] =>  0:20
+    :END:
+
+At present we are reading the parent field from meta-data in coding's
+parsing transform. If we create a transform for this in injection,
+this would mean that all meta-model elements would have access to
+parenting via meta-data. We could also name the transform a bit
+better.
 
 *** Validate feature template names                                   :story:
 
