--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,26 +13,26 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-25 Sat 17:54]
+#+CAPTION: Clock summary at [2019-05-29 Wed 11:00]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *32:03* |       |       | 100.0 |
+| *Total time*                                           | *32:52* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 32:03   |       |       | 100.0 |
-| Active                                                 |         | 32:03 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |  11.3 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |  11.8 |
-| Sprint and product backlog grooming                    |         |       |  1:18 |   4.1 |
-| Make wale templates meta-model elements                |         |       |  2:45 |   8.6 |
-| Flatten the data directory                             |         |       |  1:11 |   3.7 |
+| Stories                                                | 32:52   |       |       | 100.0 |
+| Active                                                 |         | 32:52 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |  11.0 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |  11.5 |
+| Sprint and product backlog grooming                    |         |       |  2:07 |   6.4 |
+| Make wale templates meta-model elements                |         |       |  2:45 |   8.4 |
+| Flatten the data directory                             |         |       |  1:11 |   3.6 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.8 |
-| Rename coding model                                    |         |       |  2:17 |   7.1 |
-| Windows build is failing on a number of tests          |         |       |  0:30 |   1.6 |
-| Read variability papers                                |         |       |  0:56 |   2.9 |
-| Add code generation support to static configurations   |         |       | 13:09 |  41.0 |
+| Rename coding model                                    |         |       |  2:17 |   6.9 |
+| Windows build is failing on a number of tests          |         |       |  0:30 |   1.5 |
+| Read variability papers                                |         |       |  0:56 |   2.8 |
+| Add code generation support to static configurations   |         |       | 13:09 |  40.0 |
 | Move parent processing to injection                    |         |       |  0:24 |   1.2 |
-| Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   6.0 |
+| Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   5.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -203,6 +203,7 @@ Time spent creating the demo and presentation.
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-05-29 Wed 10:11]--[2019-05-29 Wed 11:00] =>  0:49
     CLOCK: [2019-05-25 Sat 10:28]--[2019-05-25 Sat 10:38] =>  0:10
     CLOCK: [2019-05-24 Fri 08:45]--[2019-05-24 Fri 08:59] =>  0:24
     CLOCK: [2019-05-23 Thu 10:45]--[2019-05-23 Thu 11:01] =>  0:16
