--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,26 +13,27 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-29 Wed 11:46]
+#+CAPTION: Clock summary at [2019-05-29 Wed 15:47]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *33:37* |       |       | 100.0 |
+| *Total time*                                           | *35:26* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 33:37   |       |       | 100.0 |
-| Active                                                 |         | 33:37 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |  10.8 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |  11.2 |
-| Sprint and product backlog grooming                    |         |       |  2:07 |   6.3 |
-| Make wale templates meta-model elements                |         |       |  2:45 |   8.2 |
-| Flatten the data directory                             |         |       |  1:11 |   3.5 |
+| Stories                                                | 35:26   |       |       | 100.0 |
+| Active                                                 |         | 35:26 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |  10.2 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |  10.6 |
+| Sprint and product backlog grooming                    |         |       |  2:07 |   6.0 |
+| Make wale templates meta-model elements                |         |       |  2:45 |   7.8 |
+| Flatten the data directory                             |         |       |  1:11 |   3.3 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.7 |
-| Rename coding model                                    |         |       |  2:17 |   6.8 |
-| Windows build is failing on a number of tests          |         |       |  0:30 |   1.5 |
-| Read variability papers                                |         |       |  0:56 |   2.8 |
-| Add code generation support to static configurations   |         |       | 13:09 |  39.1 |
-| Move parent processing to injection                    |         |       |  1:09 |   3.4 |
-| Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   5.7 |
+| Rename coding model                                    |         |       |  2:17 |   6.4 |
+| Windows build is failing on a number of tests          |         |       |  0:30 |   1.4 |
+| Consider a test suite level logging flag               |         |       |  1:40 |   4.7 |
+| Read variability papers                                |         |       |  0:56 |   2.6 |
+| Add code generation support to static configurations   |         |       | 13:09 |  37.1 |
+| Move parent processing to injection                    |         |       |  1:18 |   3.7 |
+| Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   5.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -394,6 +395,9 @@ all feature names are validated.
 
 *** COMPLETED Consider a test suite level logging flag                :story:
     CLOSED: [2019-05-25 Sat 17:53]
+    :LOGBOOK:
+    CLOCK: [2019-05-29 Wed 14:06]--[2019-05-29 Wed 15:46] =>  1:40
+    :END:
 
 *Rationale*: implemented as part of the windows build investigation.
 
@@ -522,6 +526,7 @@ Approach:
 
 *** STARTED Move parent processing to injection                       :story:
     :LOGBOOK:
+    CLOCK: [2019-05-29 Wed 11:47]--[2019-05-29 Wed 11:56] =>  0:09
     CLOCK: [2019-05-29 Wed 11:18]--[2019-05-29 Wed 11:46] =>  0:28
     CLOCK: [2019-05-29 Wed 11:00]--[2019-05-29 Wed 11:17] =>  0:17
     CLOCK: [2019-05-25 Sat 15:40]--[2019-05-25 Sat 15:44] =>  0:04
