--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,26 +13,26 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-29 Wed 16:21]
+#+CAPTION: Clock summary at [2019-05-29 Wed 16:36]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *36:00* |       |       | 100.0 |
+| *Total time*                                           | *36:14* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 36:00   |       |       | 100.0 |
-| Active                                                 |         | 36:00 |       | 100.0 |
+| Stories                                                | 36:14   |       |       | 100.0 |
+| Active                                                 |         | 36:14 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  3:37 |  10.0 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |  10.5 |
-| Sprint and product backlog grooming                    |         |       |  2:07 |   5.9 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |  10.4 |
+| Sprint and product backlog grooming                    |         |       |  2:07 |   5.8 |
 | Make wale templates meta-model elements                |         |       |  2:45 |   7.6 |
 | Flatten the data directory                             |         |       |  1:11 |   3.3 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.7 |
 | Rename coding model                                    |         |       |  2:17 |   6.3 |
 | Windows build is failing on a number of tests          |         |       |  0:30 |   1.4 |
 | Consider a test suite level logging flag               |         |       |  1:40 |   4.6 |
-| Move parent processing to injection                    |         |       |  1:52 |   5.2 |
+| Move parent processing to injection                    |         |       |  2:06 |   5.8 |
 | Read variability papers                                |         |       |  0:56 |   2.6 |
-| Add code generation support to static configurations   |         |       | 13:09 |  36.5 |
+| Add code generation support to static configurations   |         |       | 13:09 |  36.3 |
 | Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   5.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -410,6 +410,7 @@ is not a big problem.
 *** CANCELLED Move parent processing to injection                     :story:
     CLOSED: [2019-05-29 Wed 16:21]
     :LOGBOOK:
+    CLOCK: [2019-05-29 Wed 16:22]--[2019-05-29 Wed 16:36] =>  0:14
     CLOCK: [2019-05-29 Wed 15:47]--[2019-05-29 Wed 16:21] =>  0:34
     CLOCK: [2019-05-29 Wed 11:47]--[2019-05-29 Wed 11:56] =>  0:09
     CLOCK: [2019-05-29 Wed 11:18]--[2019-05-29 Wed 11:46] =>  0:28
