--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,27 +13,28 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-30 Thu 22:39]
+#+CAPTION: Clock summary at [2019-05-31 Fri 10:53]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *45:32* |       |       | 100.0 |
+| *Total time*                                           | *46:41* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 45:32   |       |       | 100.0 |
-| Active                                                 |         | 45:32 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |   7.9 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |   8.3 |
-| Sprint and product backlog grooming                    |         |       |  2:18 |   5.1 |
-| Make wale templates meta-model elements                |         |       |  2:45 |   6.0 |
-| Flatten the data directory                             |         |       |  1:11 |   2.6 |
+| Stories                                                | 46:41   |       |       | 100.0 |
+| Active                                                 |         | 46:41 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |   7.7 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |   8.1 |
+| Sprint and product backlog grooming                    |         |       |  3:02 |   6.5 |
+| Make wale templates meta-model elements                |         |       |  2:45 |   5.9 |
+| Flatten the data directory                             |         |       |  1:11 |   2.5 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.5 |
-| Rename coding model                                    |         |       |  2:17 |   5.0 |
+| Rename coding model                                    |         |       |  2:17 |   4.9 |
 | Windows build is failing on a number of tests          |         |       |  0:30 |   1.1 |
-| Consider a test suite level logging flag               |         |       |  1:40 |   3.7 |
-| Move parent processing to injection                    |         |       |  2:06 |   4.6 |
+| Consider a test suite level logging flag               |         |       |  1:40 |   3.6 |
+| Move parent processing to injection                    |         |       |  2:06 |   4.5 |
+| Windows clang-cl release build is failing 4 tests      |         |       |  2:16 |   4.9 |
+| Fix issues with nightly build and CI                   |         |       |  0:04 |   0.1 |
 | Read variability papers                                |         |       |  0:56 |   2.0 |
-| Add code generation support to static configurations   |         |       | 22:16 |  48.9 |
-| Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   4.2 |
+| Add code generation support to static configurations   |         |       | 22:16 |  47.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -204,6 +205,7 @@ Time spent creating the demo and presentation.
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-05-31 Fri 10:01]--[2019-05-31 Fri 10:45] =>  0:44
     CLOCK: [2019-05-30 Thu 22:27]--[2019-05-30 Thu 22:38] =>  0:11
     CLOCK: [2019-05-29 Wed 10:11]--[2019-05-29 Wed 11:00] =>  0:49
     CLOCK: [2019-05-25 Sat 10:28]--[2019-05-25 Sat 10:38] =>  0:10
@@ -443,6 +445,64 @@ point we reached the limitation on how much abstraction we can push
 down into injection. Therefore it is not possible to do this, given
 the current conceptual model.
 
+*** COMPLETED Windows clang-cl release build is failing 4 tests       :spike:
+    CLOSED: [2019-05-31 Fri 10:49]
+    :LOGBOOK:
+    CLOCK: [2019-05-31 Fri 10:48]--[2019-05-31 Fri 10:53] =>  0:05
+    CLOCK: [2019-05-31 Fri 08:46]--[2019-05-31 Fri 09:02] =>  0:16
+    CLOCK: [2019-05-25 Sat 17:17]--[2019-05-25 Sat 17:54] =>  0:37
+    CLOCK: [2019-05-25 Sat 15:58]--[2019-05-25 Sat 17:16] =>  1:18
+    :END:
+
+*Rationale*: the errors appear to have gone away for now. We have
+noted down the likely changes.
+
+This has been going on for a fair bit, and we've ignored it so far but
+its a bit annoying. It also makes it likely that we break something
+without noticing because we are getting used to seeing red.
+
+The problem started at build [[https://ci.appveyor.com/project/mcraveiro/dogen/builds/23959333/job/r34e67jyjk6s8x66][1771]]. It happened with commit
+[[https://github.com/MASD-Project/dogen/commit/2eca4e92de08cd3a84944abc9cf26e7e117e7144][2eca4e92de08cd3a84944abc9cf26e7e117e7144]]. Everything was fine up to
+commit [[https://github.com/MASD-Project/dogen/commit/655b56cd32b94b7091e79c4cc76f6a2db5458416][655b56cd32b94b7091e79c4cc76f6a2db5458416]]. However, manually
+checking the commits in this interval did not reveal anything obvious.
+
+Failing tests:
+
+- masd.dogen.coding.tests/object_templates_transform_tests/model_with_object_template_that_parents_missing_object_template_throws (Failed)
+- masd.dogen.coding.tests/object_templates_transform_tests/model_with_object_that_models_missing_object_template_throws (Failed)
+- masd.dogen.coding.tests/object_templates_transform_tests/model_with_object_with_missing_parent_throws (Failed)
+- masd.dogen.coding.tests/stereotypes_transform_tests/visitable_object_with_no_leaves_throws (Failed)
+
+All failing tests are related to exceptions that should be thrown. All
+work on all other builds (debug and release) except this one,
+including MSVC release. However, they were previously working fine on
+this build (over 10 successful runs).
+
+Interestingly, on failure we do not seem to get any output at all.
+
+Notes:
+
+- History of builds available [[https://my.cdash.org/index.php?project=MASD+Project+-+Dogen&filtercount=4&showfilters=1&filtercombine=and&field1=site&compare1=61&value1=appveyor&field2=buildname&compare2=61&value2=clang-cl-Windows-AMD64-Release&field3=buildtype&compare3=61&value3=Continuous&field4=buildstarttime&compare4=0&value4=][here]].
+- it would be nice to be able to enable debug logging for these tests
+  test and have the CI dump the log files into the main build
+  log. That is, what we really need is to dump the log to the console
+  for a specific set of tests. We could create a different macro that
+  does this and manually replace it just for these tests.
+- seems like we've managed to fix the clang-cl errors that have been
+  traffic-lighting of late. This was a result of the assets changes on
+  enumerations, primitives and parsing. Changes are between commits:
+  - end: [[https://github.com/MASD-Project/dogen/commit/c629048f0c873f76f576200073ee647acbfbfcea][c629048f0c873f76f576200073ee647acbfbfcea]]
+  - start: [[https://github.com/MASD-Project/dogen/commit/166110a944587b0dfb2a53794fd71b504da89065][166110a944587b0dfb2a53794fd71b504da89065]]
+
+*** STARTED Fix issues with nightly build and CI                      :story:
+    :LOGBOOK:
+    CLOCK: [2019-05-30 Thu 22:39]--[2019-05-30 Thu 22:43] =>  0:04
+    :END:
+
+Time spent fixing build issues with either nightlies and/or CI.
+
+- make space for builds in CDash.
+
 *** STARTED Read variability papers                                   :story:
     :LOGBOOK:
     CLOCK: [2019-05-21 Tue 17:35]--[2019-05-21 Tue 17:45] =>  0:10
@@ -582,44 +642,6 @@ Approach:
 - update resolver to resolve static configurations.
 - generate the struct for the static configuration.
 - generate a method to read the struct from a dynamic configuration.
-
-*** STARTED Windows clang-cl release build is failing 4 tests         :spike:
-    :LOGBOOK:
-    CLOCK: [2019-05-25 Sat 17:17]--[2019-05-25 Sat 17:54] =>  0:37
-    CLOCK: [2019-05-25 Sat 15:58]--[2019-05-25 Sat 17:16] =>  1:18
-    :END:
-
-This has been going on for a fair bit, and we've ignored it so far but
-its a bit annoying. It also makes it likely that we break something
-without noticing because we are getting used to seeing red.
-
-The problem started at build [[https://ci.appveyor.com/project/mcraveiro/dogen/builds/23959333/job/r34e67jyjk6s8x66][1771]]. It happened with commit
-[[https://github.com/MASD-Project/dogen/commit/2eca4e92de08cd3a84944abc9cf26e7e117e7144][2eca4e92de08cd3a84944abc9cf26e7e117e7144]]. Everything was fine up to
-commit [[https://github.com/MASD-Project/dogen/commit/655b56cd32b94b7091e79c4cc76f6a2db5458416][655b56cd32b94b7091e79c4cc76f6a2db5458416]]. However, manually
-checking the commits in this interval did not reveal anything obvious.
-
-Failing tests:
-
-- masd.dogen.coding.tests/object_templates_transform_tests/model_with_object_template_that_parents_missing_object_template_throws (Failed)
-- masd.dogen.coding.tests/object_templates_transform_tests/model_with_object_that_models_missing_object_template_throws (Failed)
-- masd.dogen.coding.tests/object_templates_transform_tests/model_with_object_with_missing_parent_throws (Failed)
-- masd.dogen.coding.tests/stereotypes_transform_tests/visitable_object_with_no_leaves_throws (Failed)
-
-All failing tests are related to exceptions that should be thrown. All
-work on all other builds (debug and release) except this one,
-including MSVC release. However, they were previously working fine on
-this build (over 10 successful runs).
-
-Interestingly, on failure we do not seem to get any output at all.
-
-Notes:
-
-- History of builds available [[https://my.cdash.org/index.php?project=MASD+Project+-+Dogen&filtercount=4&showfilters=1&filtercombine=and&field1=site&compare1=61&value1=appveyor&field2=buildname&compare2=61&value2=clang-cl-Windows-AMD64-Release&field3=buildtype&compare3=61&value3=Continuous&field4=buildstarttime&compare4=0&value4=][here]].
-- it would be nice to be able to enable debug logging for these tests
-  test and have the CI dump the log files into the main build
-  log. That is, what we really need is to dump the log to the console
-  for a specific set of tests. We could create a different macro that
-  does this and manually replace it just for these tests.
 
 *** Validate feature template names                                   :story:
 
@@ -763,10 +785,6 @@ Links:
 
 - [[https://www.technovelty.org/linux/stripping-shared-libraries.html][Stripping shared libraries]]
 - [[https://cmake.org/pipermail/cmake/2012-March/049741.html][make install/strip does not strip static libraries]]
-
-*** Fix issues with nightly build and CI                              :story:
-
-Time spent fixing build issues with either nightlies and/or CI.
 
 *** Emacs maintenance and exploration work                            :story:
 
